[gd_scene load_steps=3 format=3 uid="uid://cpusoihovci1p"]

[ext_resource type="Script" path="res://screens/end_screen.gd" id="1_bg1w3"]
[ext_resource type="AudioStream" uid="uid://c6rwc8bip1ya4" path="res://audio/game_over.wav" id="2_kxf3o"]

[node name="EndScreen" type="Node2D"]
script = ExtResource("1_bg1w3")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.792969, 0.226563, 0.3125, 1)

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 390.0
offset_top = 20.0
offset_right = 890.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="FinalWaveDisplayLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 391.0
offset_top = 95.0
offset_right = 891.0
offset_bottom = 167.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="FinalCurrencyAmountLabel" type="Label" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 387.0
offset_top = 149.0
offset_right = 887.0
offset_bottom = 221.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="MainMenuButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 540.0
offset_top = 581.0
offset_right = 740.0
offset_bottom = 631.0
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="Sounds" type="Node2D" parent="."]

[node name="GameOver" type="AudioStreamPlayer" parent="Sounds"]
unique_name_in_owner = true
stream = ExtResource("2_kxf3o")

[connection signal="pressed" from="Control/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
